[package]
name = "mappable-rc"
version = "0.1.1"
description = "Provides mappable reference counted types"
authors = ["Jakob Degen <jakob.e.degen@gmail.com>"]

edition = "2021"

readme = "CRATES.md"
repository = "https://github.com/JakobDegen/mappable-rc"
license = "MIT OR Apache-2.0"

keywords = ["reference", "thread", "rc", "arc"]
categories = ["memory-management", "no-std"]

[features]
default = []
std = []
